objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Create_Lease_Docs_FR__c</fullName>
        <formula>IF( AND(Is_Locked__c,Code_Expiration_Date__c &gt;= TODAY(), Quote_LOI_Status__c == &apos;&apos;,OR(
TEXT(Customer_Downpayment_Type__c) = &quot;0 Deposit Offer&quot;,
TEXT(Customer_Downpayment_Type__c) = &quot;With Deposit Offer&quot;
) ),
HYPERLINK(&quot;/apex/TPO_CreateLP_FR?qid=&quot;+ Id,image(&quot;/servlet/servlet.FileDownload?file=01580000001jaxT&quot;,&quot;&quot;),&quot;_self&quot;),

IF(AND(Is_Locked__c,Code_Expiration_Date__c &gt;= TODAY(),Quote_LOI_Status__c == &apos;LOI&apos;),HYPERLINK(&quot;https://www.appextremes.com/apps/Conga/PointMerge.aspx?sessionId=&quot; &amp; $Api.Session_ID&amp;&quot;&amp;serverUrl=&quot; &amp; $Api.Partner_Server_URL_80 &amp;
&quot;&amp;id=&quot; &amp; Id &amp;
&quot;&amp;Reportid=[RentalTwelve]00O80000004vCNJ?pv0=&quot;+Id+&quot;&amp;Reportid=[RentalEight]00O80000004vCNI?pv0=&quot;+Id+&quot;&amp;Reportid=[RentalAll]00O80000004vCs9?pv0=&quot;+Id+&quot;&amp;ReportId=[Primarycontact]00O80000004vCNL?pv0=&quot;+PrimaryContact__r.Id+&quot;&amp;ReportId=[Seccontact]00O80000004vCNK?pv0=&quot;+SecondaryContact__r.Id+&quot;&amp;TemplateId=a2N80000000PEYC&quot; &amp;
&quot;&amp;DS7=4 &amp;Culture=fr-FR &amp;ESVisible=0 &amp;ESSignaturetype=1 &amp;ESCustomField1=Quote__c &amp;ESCustomFieldValue1=&quot; &amp; Id &amp;
&quot;&amp;ESCustomField2=Account__c &amp;ESCustomFieldValue2=&quot; &amp; Related_Account__c &amp;
&quot;&amp;ESCustomField3=Created_By_Partner_Poratl_User__c &amp;ESCustomFieldValue3=Y&quot; &amp;
&quot;&amp;ESCustomField4=Agreement_Name__c &amp;ESCustomFieldValue4=&quot; &amp; $User.Acc_Name_Enc__c &amp; &quot;-&quot; &amp; Account__r.Account_Name__c &amp; &quot;FR Lease Document&quot; &amp;
&quot;&amp;ESCustomField5=Agg_created_through__c &amp;ESCustomFieldValue5=LOI&quot; &amp;
&quot;&amp;DS7Preview=1FP0=0&amp;OFN=&quot;&amp; $User.Acc_Name_Enc__c &amp; &quot;-&quot; &amp; Account__r.Account_Name__c &amp; &quot;-Lease Document&quot; &amp; &quot;-&quot; &amp; Final_Lease_Number__c &amp;
&quot;&amp;DefaultPDF=0 &amp;AttachmentParentId=&quot; &amp; Account__r.Id &amp;
&quot;&amp;ESAgreementName=&quot; &amp; $User.Acc_Name_Enc__c &amp; &quot;-&quot; &amp; Account__r.Account_Name__c &amp; &quot;-FR Lease Document&quot;,
image(&quot;/servlet/servlet.FileDownload?file=01580000001jxMM&quot;,&quot;_blank&quot;) ) ,
IF(AND(Is_Locked__c,Code_Expiration_Date__c &gt;= TODAY(),Quote_LOI_Status__c == &apos;CLC&apos;),&quot;Bail déjà existant pour ce devis.&quot; , IF(AND(Agreement_Status__c &lt;&gt; &apos;&apos;),Agreement_Status__c,
IF( AND(Is_Locked__c,Code_Expiration_Date__c &gt;= TODAY(), Quote_LOI_Status__c == &apos;&apos;,
TEXT(Customer_Downpayment_Type__c) = &quot;&quot;),&quot;Veuillez renseigner le choix du propriétaire&quot;, &quot;Le devis doit être verrouillé et avant la date d&apos;expiration.&quot;
)

))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Legal Docs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Lease_Docs__c</fullName>
        <description>Project: GPP
Description: Create Lease Contract for Locked Quote.</description>
        <formula>IF(AND(Is_Locked__c,Code_Expiration_Date__c &gt;= TODAY(),Contractors_License__c = &apos;Y&apos;), 
IF(ISPICKVAL(QuoteType__c,&quot;Lease&quot;), 
IF(AND($User.Lease_doc_creation_allowed__c,Account__r.Partner_Account__r.Lease2_0_Program_Partner__c,INCLUDES($User.Business_Function__c,&quot;Create Lease Quote&quot;),NOT(Doc_out_for_signature__c)),IF(OR(Credit_Check_Application__r.Status__c=&apos;Approved&apos;,Credit_Check_Application__r.Status__c = &apos;Pending - Credit Review&apos;),HYPERLINK(&apos;apex/CreateLeaseDocsVF?Id=&apos;&amp;Id&amp; &quot;&amp;show=true&quot;,image(&quot;/servlet/servlet.FileDownload?file=01580000001MmlS&quot;,&quot;_blank&quot;)),HYPERLINK(&apos;apex/CreateLeaseDocsVF?Id=&apos;&amp;Id&amp; &quot;&amp;show=false&quot;,image(&quot;/servlet/servlet.FileDownload?file=01580000001MmlX&quot;,&quot;_blank&quot;))),IF(Doc_out_for_signature__c,image(&quot;/servlet/servlet.FileDownload?file=01580000001MDoh&quot;,&quot;_blank&quot;),&quot;You do not have authority to create Lease Contract&quot;) 
),IF(ISPICKVAL(QuoteType__c,&quot;Loan&quot;),IF(AND(Account__r.Partner_Account__r.Loan_Partner__c,INCLUDES($User.Business_Function__c,&quot;Create Loan Quote&quot;)),IF(ISPICKVAL(Loan_Contract_Status__c,&quot;Lending Agreement Created&quot;),HYPERLINK(&apos;apex/CreateLeaseDocsVF?Id=&apos;&amp;Id&amp; &quot;&amp;show=true&quot;,image(&quot;/servlet/servlet.FileDownload?file=01534000001tYhE&quot;,&quot;_blank&quot;)),IF(ISPICKVAL(Loan_Contract_Status__c,&quot;HIC Created&quot;),image(&quot;/servlet/servlet.FileDownload?file=01534000001tYh9&quot;,&quot;_blank&quot;),IF(ISPICKVAL(Loan_Contract_Status__c,&apos;&apos;),IF(Opportunity.Contract_Status__c != &apos;Lending Agreement Created&apos;,HYPERLINK(&apos;apex/SendLendingAgreementConfirmation?Id=&apos;&amp;Id+&apos;&amp;accId=&apos;&amp;Account__c,image(&quot;/servlet/servlet.FileDownload?file= 015340000025L2J&quot;,&quot;_blank&quot;),&apos;_self&apos;),&quot;Lending Agreement already exists for this Customer from another Quote&quot;),&quot;NOT NULL&quot;))),&quot;You do not have authority to create Loan Contract&quot;),IF(ISPICKVAL(QuoteType__c,&quot;Cash&quot;),IF(Sector__c = &apos;Residential&apos;,IF(OR(ISPICKVAL(Account__r.Partner_Account__r.Channel__c, &quot;Direct&quot;),ISPICKVAL(Account__r.Partner_Account__r.Channel__c, &quot;TPS&quot;)),HYPERLINK(&apos;apex/CreateLeaseDocsVF?Id=&apos;&amp;Id&amp; &quot;&amp;show=true&quot;,image(&quot;/servlet/servlet.FileDownload?file=015340000028Led&quot;,&quot;_blank&quot;)),&quot;Cannot Create Contracts for Cash Quotes&quot;),NULL),&quot;Cannot Create Contracts for Cash Quotes&quot;)) 
),IF(NOT(CONTAINS(Opportunity.Owner.CountryDomainText__c,&apos;au&apos;)),&quot;Quote must be locked&quot; ,&quot;Quote must be locked&quot;) 
)</formula>
        <inlineHelpText>Quote must be locked and w/in the Expiration Date. No Lease systems &gt;30 KW</inlineHelpText>
        <label>Create Contracts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_TPS_PO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create TPS PO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Termination_Doc__c</fullName>
        <formula>IF(OR($Profile.Name  = &apos;SunPower Lease Payment Access&apos;, $Profile.Name  = &apos;System Administrator&apos;,$Profile.Name  = &apos;Sunpower Admin(No Deployment)&apos; ),
IF(Lease_Doc_Created__c,
HYPERLINK(&quot;https://composer.congamerge.com?sessionId=&quot;&amp;$Api.Session_ID&amp;&quot;&amp;serverUrl=&quot;&amp;$Api.Partner_Server_URL_290&amp;&quot;&amp;id=&quot;&amp;Id&amp;&quot;&amp;ReportId=00OV0000000OEB9&amp;TemplateId=&quot;&amp;IF(((Temp_Contact_1__c &lt;&gt; NULL || Temp_Contact_1__c &lt;&gt; &apos;&apos;)&amp;&amp; (Temp_Contact_2__c &lt;&gt; NULL || Temp_Contact_2__c &lt;&gt; &apos;&apos;)),&quot;a2N80000000PB0L&quot;,IF(((Temp_Contact_1__c &lt;&gt; NULL || Temp_Contact_1__c &lt;&gt; &apos;&apos;) &amp;&amp; (Temp_Contact_2__c = NULL || Temp_Contact_2__c = &apos;&apos;)), &quot;a2N80000000PB0Q&quot;, &apos;&apos;))&amp;&quot;&amp;DS7=4&amp;ESSignaturetype=2&amp;ESCustomField1=Quote__c&amp;ESCustomFieldValue1=&quot;&amp;Id&amp;&quot;&amp;ESCustomField2=Account__c&amp;ESCustomFieldValue2=&quot;&amp;Related_Account__c&amp;&quot;&amp;ESCustomField3=OwnerId&amp;ESCustomFieldValue3=&quot;&amp;Account__r.OwnerId&amp;&quot;&amp;ESCustomField4=Created_By_Partner_Poratl_User__c&amp;ESCustomFieldValue4=Y&quot;&amp;&quot;&amp;ESCustomField5=Agreement_Name__c&amp;ESCustomFieldValue5=&quot;&amp;Account__r.Partner_Account__r.Account_Name__c&amp;&quot;-&quot;&amp;Account__r.Account_Name__c&amp;&quot;-Termination Doc&quot;&amp;&quot;&amp;DS7Preview=1&amp;FP0=1&amp;OFN=&quot;&amp;Account__r.Partner_Account__r.Account_Name__c&amp;&quot;-&quot;&amp;Account__r.Account_Name__c&amp;&quot;-Termination Doc&quot;&amp;&quot;&amp;DefaultPDF=1&amp;AttachmentParentId=&quot;&amp;Account__r.Id&amp;&quot;&amp;ESAgreementName=&quot;&amp;Account__r.Partner_Account__r.Account_Name__c&amp;&quot;-&quot;&amp;Account__r.Account_Name__c&amp;&quot;-Termination Doc&quot;,image(&quot;/servlet/servlet.FileDownload?file=01580000001M9fq&quot;,&quot;_blank&quot;)
), &quot;&quot;
),&quot;Termination Not Allowed&quot;)</formula>
        <label>Create Termination Doc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Date_custom__c</fullName>
        <formula>TEXT( MONTH(DATEVALUE(CreatedDate)) ) &amp; &quot;/&quot; &amp; TEXT(DAY(DATEVALUE(CreatedDate))) &amp; &quot;/&quot; &amp; TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
        <label>Created Date custom</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Bureau__c</fullName>
        <label>Credit Bureau</label>
        <picklist>
            <picklistValues>
                <fullName>Mosaic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loanpath</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this is used to associate the Quote with Credit Check request so that we can access the fields on Credit CHeck from Quote using formula fields or by referencing them using __r notation</description>
        <label>Credit Check Application</label>
        <referenceTo>Credit_Check_Request__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Rating__c</fullName>
        <description>Pivotal #141277793. PPA Savings Tab UI</description>
        <label>Credit Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Rated Investment Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unrated Investment Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rated Non-Investment Grade</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Rate__c</fullName>
        <label>Current Rate</label>
        <picklist>
            <picklistValues>
                <fullName>PG &amp; NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerID__c</fullName>
        <label>CustomerID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Accounts_Address__c</fullName>
        <formula>Account__r.BillingStreet + &apos;, &apos; + Account__r.BillingCity + &apos;, &apos; + Account__r.BillingState  + &apos;, &apos; +  Account__r.BillingCountry  +  &apos;, &apos; +Account__r.BillingPostalCode</formula>
        <label>Customer Accounts Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Accounts_Address_for_LDA__c</fullName>
        <formula>Account__r.BillingStreet + &apos;, &apos; + Account__r.BillingCity + &apos;, &apos; + Account__r.BillingState + &apos; &apos; +Account__r.BillingPostalCode+ &apos; &apos; + &apos; &apos; + Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Accounts Address for LDA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Address_Address__c</fullName>
        <label>Customer Address: Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Address_City__c</fullName>
        <label>Customer Address: City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Address_County__c</fullName>
        <label>Customer Address: County</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Address_State__c</fullName>
        <label>Customer Address: State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Address_Zip__c</fullName>
        <label>Customer Address: Zip</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Downpayment_Type__c</fullName>
        <description>&lt;font color=&quot;red&quot;&gt;HO Selection&lt;/font&gt;</description>
        <label>HO Selection</label>
        <picklist>
            <picklistValues>
                <fullName>0 Deposit Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With Deposit Offer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Electric_Utility__c</fullName>
        <label>Customer Electric Utility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Rate_Name__c</fullName>
        <label>Customer Rate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_s_DownPayment_1__c</fullName>
        <description>New field for ABC calculation for FR TPO</description>
        <label>Customer&apos;s DownPayment_1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_s_DownPayment_2__c</fullName>
        <description>New field that is used for ABC calculation for FR TPO</description>
        <label>Customer&apos;s DownPayment_2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_Cabinet_Multiple_Roofs__c</fullName>
        <formula>DC_Cabinet__c +  DC_Cabinet_Roof2__c  + DC_Cabinet_Roof3__c + DC_Cabinet_Roof4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DC Cabinet Multiple Roofs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_Cabinet_Roof2__c</fullName>
        <label>DC Cabinet Roof2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_Cabinet_Roof3__c</fullName>
        <label>DC Cabinet Roof3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_Cabinet_Roof4__c</fullName>
        <label>DC Cabinet Roof4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_Cabinet__c</fullName>
        <label>DC Cabinet Roof1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DELETE_Proposal_Due__c</fullName>
        <label>DELETE Proposal Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM__c</fullName>
        <label>DM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRC_Notes__c</fullName>
        <description>Deal Review Notes.</description>
        <label>DRC Notes</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DRIP_Fee__c</fullName>
        <description>It&apos;s a field to store the DRIP fee for a TPS deal. It&apos;s calculated based on System Cost, Adder feee of Deal and Fixed fee and Commission for a dealer.</description>
        <label>DRIP Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Created__c</fullName>
        <label>Date Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Modified__c</fullName>
        <description>This field reflects the date quote was locked. This is used in the Sales tax formula calculation for booking template.</description>
        <label>Date Modified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Proposal_Delivered__c</fullName>
        <label>Date Proposal Delivered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_to_Customer__c</fullName>
        <label>Date Sent to Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_Left_to_Complete_Quote__c</fullName>
        <formula>Proposal_Completed__c  - NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day Left to Complete Quote</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deadline_Type__c</fullName>
        <inlineHelpText>Drop Dead = RFP deadline
Firm = Strong Customer expectations for on-time delivery
Flexible = Little Customer expectations for on-time delivery</inlineHelpText>
        <label>Deadline Type</label>
        <picklist>
            <picklistValues>
                <fullName>Drop Dead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flexible</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deal_Review_Date__c</fullName>
        <description>What is the Deal Review Date?</description>
        <label>Deal Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <formula>CASE(Opportunity.Type_of_Installation__c,
&quot;Standard&quot;,&quot;Standard&quot;,
&quot;Access (Lease)&quot;,&quot;Access (Lease)&quot;,
&quot;Select (Options)&quot;,&quot;Select (Options)&quot;,&quot;update opportunity record&quot;) &amp; &quot; - &quot; &amp;CASE(Opportunity.Type_of_Building__c,
&quot;Production Home Community&quot;,&quot;Production Home Community&quot;,
&quot;Retrofit Home&quot;,&quot;Retrofit Home&quot;,
&quot;Multi-Family&quot;,&quot;Multi-Family&quot;,
&quot;Commercial&quot;,&quot;Commercial&quot;,&quot;update opportunity record&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Contractor_License_Number__c</fullName>
        <label>Dealer Contractor License Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Fee_Installation_Partner_Total__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Project: GPP
Description: Total applicable fee for the Installation Partner, updated by GPP UpdateQuoteDetails API</description>
        <inlineHelpText>Installation Partner&apos;s Total Dealer Fee</inlineHelpText>
        <label>Dealer Fee (Installation Partner Total)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Fees_Sales_Partner_Total__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Project: GPP
Description: Total applicable fee for the Sales Partner, updated by GPP UpdateQuoteDetails API</description>
        <inlineHelpText>Sales Partner&apos;s Total Dealer Fee</inlineHelpText>
        <label>Dealer Fees (Sales Partner Total)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Fees__c</fullName>
        <label>Dealer Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Installer_Address_Address__c</fullName>
        <label>Dealer/Installer Address: Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Installer_Address_City__c</fullName>
        <label>Dealer/Installer Address: City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Installer_Address_County__c</fullName>
        <label>Dealer/Installer Address: County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Installer_Address_State__c</fullName>
        <label>Dealer/Installer Address: State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Installer_Address_Zip__c</fullName>
        <label>Dealer/Installer Address: Zip</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Installer__c</fullName>
        <label>Dealer/Installer</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <formula>Account__r.Partner_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <defaultValue>&quot;New Quote&quot;</defaultValue>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DesignLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Design</label>
        <referenceTo>Design__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Design_Factor__c</fullName>
        <label>Design Factor</label>
        <picklist>
            <picklistValues>
                <fullName>Automatic</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Specified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Design_Factor_value__c</fullName>
        <description>will contacin the value for Design Factor once some one selected &quot;specified&quot; in Quick quote UI</description>
        <label>Design Factor value</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Help_Status__c</fullName>
        <label>Design Help Status</label>
        <picklist>
            <picklistValues>
                <fullName>Design Help Not Required</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Design Help Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Partner Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Design__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Design</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Designer__c</fullName>
        <label>Designer</label>
        <picklist>
            <picklistValues>
                <fullName>Adam Han</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andrew Worm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anita Budhraja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austin Quig-Hartman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dylan Anderson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jason Claiborne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jemuel Selorio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jerry Caldwell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jolie Assina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logan Granger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mike Miller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peter Todd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rachel Davis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rodel Ocampo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Romeo Nido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ross Heiman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taylor Davis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zlata  Zoran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antonio Godino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reda Kaismoune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Megan Belomy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Designers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Designers</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes (Designer)</relationshipLabel>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Diff_Sales_and_List_Price_Total__c</fullName>
        <formula>(Total_List_Price__c -  TotalPrice )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diff Sales and List Price Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DirectMargin1__c</fullName>
        <formula>Opportunity.Amount  -  Opportunity.Total_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Project Margin1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DirectMargin1_per__c</fullName>
        <formula>Opportunity.Amount  /  (  Opportunity.Total_Cost__c -  Opportunity.Total_Cost__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Project Margin1%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DirectMargin_per__c</fullName>
        <formula>IF(TotalPrice !=0, (TotalPrice - Total_Cost__c) / TotalPrice , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Project Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Direct_Margin__c</fullName>
        <formula>TotalPrice  -  Total_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Project Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <label>Direction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Doc_out_for_signature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Doc out for signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Created_Date__c</fullName>
        <formula>CASE(MONTH(Today()),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;) + &quot; &quot; +
TEXT(DAY(Today()))
+ &quot;, &quot; + TEXT(YEAR(Today()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Created Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DownPayment_Type__c</fullName>
        <label>DownPayment Type</label>
        <picklist>
            <picklistValues>
                <fullName>0 Down Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0 Deposit Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With Deposit Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both Offer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Down_Payment_Tax__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Project: GPP
Description: Total amount applicable as part of Down Payment Tax, updated by GPP UpdateQuoteDetails API</description>
        <inlineHelpText>Down Payment Tax Amount</inlineHelpText>
        <label>Down Payment Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Down_Payment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Down Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Down_Payment_formula__c</fullName>
        <description>Field created to show Down Payment as a currency in the Booking template. Field type can&apos;t be changed for now , later field type would be changes and this field can be removed..</description>
        <formula>Down_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Down Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Drawing_90_Due_Date__c</fullName>
        <label>Drawing - 90% Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drawing_Completed__c</fullName>
        <inlineHelpText>Define the date the Drawing is either a) tracking to completion or b) was completed</inlineHelpText>
        <label>Drawing Tracking/Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drawing_Date_Requested__c</fullName>
        <inlineHelpText>Define the date the Drawing is due based on the last agreed upon date.</inlineHelpText>
        <label>Drawing Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drawing_Days_Past_Due__c</fullName>
        <formula>Drawing_Completed__c - Drawing_Date_Requested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drawing Days Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drawings_Location__c</fullName>
        <label>Drawings Location</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dynamic_Proposal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Project Equinox. Field to determine if the quote is created and configured using Equinox proposal application</description>
        <label>Dynamic Proposal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERDF_Fee__c</fullName>
        <description>New field for calculate ABC in TPO France</description>
        <label>Actual ERDF Fee</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ESS_Term__c</fullName>
        <label>ESS Term</label>
        <picklist>
            <picklistValues>
                <fullName>5 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 Years</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Early_Buyout_Option_Date__c</fullName>
        <label>Early Buyout Option Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Early_Buyout_Option_Price__c</fullName>
        <label>Early Buyout Option Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ecobee_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ecobee User</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>